# matrix_calculator

./: .gitignore  CMakeLists.txt  README.md
src/app/: main.cpp
src/core/: constants.h  errors.h  linalg.cpp  linalg.h  matrix.cpp  matrix.h
src/io/: matrix_input.cpp  matrix_input.h  matrix_printer.cpp  matrix_printer.h
src/report/: info_step.cpp  info_step.h  property_step.cpp  property_step.h  report.h  runner.cpp  runner.h  step.h  transform_step.cpp  transform_step.h
src/util/: value.h  value_printer.cpp  value_printer.h
tests/: test_input.cpp  test_linalg.cpp  test_print.cpp  test_report.cpp
